fix: [MGS-4221] Fix Video teasers on mobile and ios

--- a/src/components/video-teaser/video-teaser.scss
+++ b/src/components/video-teaser/video-teaser.scss
@@ -8,6 +8,12 @@
         overflow: hidden;
         position: relative;
 
+        // Safari does not support aspect-ratio, we add padding-top inline in video.phtml
+        // For browsers that support aspect-ratio we have to reset padding-top
+        @supports (aspect-ratio: 1 / 1) {
+            padding-top: unset !important;
+        }
+
         // Hide video placeholder if video is not rendered
         &:empty {
             display: none;
@@ -19,12 +25,13 @@
         }
     }
 
-    // Position video in center of placeholder in case it won't fit image aspect-ratio
     [id^='video-teaser'] {
+        // If video does not fit image aspect ratio, it will center itself in the container
         width: 100%;
+        pointer-events: none;
         position: absolute;
-        top: 50%;
         left: 50%;
+        top: 50%;
         transform: translate(-50%, -50%);
     }
 }
